--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "session-jwt",
+  "name": "node-session-jwt",
   "version": "0.1.0",
   "description": "Library for verifying, decoding and interpreting SmartFile's session key (JWT token).",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/smartfile/session-jwt.git"
+    "url": "git+https://github.com/smartfile/node-session-jwt.git"
   },
   "author": "Ben Timby <btimby@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/smartfile/session-jwt/issues"
+    "url": "https://github.com/smartfile/node-session-jwt/issues"
   },
-  "homepage": "https://github.com/smartfile/session-jwt#readme",
+  "homepage": "https://github.com/smartfile/node-session-jwt#readme",
   "dependencies": {
     "bitset": "^5.1.1"
   }
