--- a/package.json
+++ b/package.json
@@ -4,11 +4,24 @@
   "description": "Library for verifying, decoding and interpreting SmartFile's session key (JWT token).",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --format node_modules/eslint-friendly-formatter ."
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": ["json", "html"]
+    "coverageReporters": [
+      "json",
+      "html"
+    ]
+  },
+  "eslintConfig": {
+    "env": {
+      "jest/globals": true
+    },
+    "extends": "airbnb-base",
+    "plugins": [
+      "jest"
+    ]
   },
   "repository": {
     "type": "git",
@@ -24,6 +37,10 @@
     "bitset": "^5.1.1"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-plugin-jest": "^24.5.2",
     "jest": "^27.2.4"
   }
 }
